カート内編集機能

--- a/app/views/admin/sidemenus/show.html.erb
+++ b/app/views/admin/sidemenus/show.html.erb
@@ -14,8 +14,8 @@
     <td><%= @sidemenu.price %></td>
   </tr>
   <tr>
-    <th>サイズ</th>
-    <td><%= @sidemenu.size %></td>
+    <th>ストック</th>
+    <td><%= @sidemenu.stock %></td>
   </tr>
   <%= form_for @sidemenu, method: :patch do |form| %>
     <tr>
