--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -15,6 +15,10 @@
     <td><%= form.text_field :password %></td>
   </tr>
   <tr>
+    <th><%= form.label :password_confirmation, "パスワード再確認" %></th>
+    <td><%= form.text_field :password_confirmation %></td>
+  </tr>
+  <tr>
     <th><%= form.label :address, "住所" %></th>
     <td><%= form.text_field :address %></td>
   </tr>
