--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -5,22 +5,17 @@
 <% end %>
 
 <% if @mainmenus.present? %>
-  <table class="list">
-    <thead>
-      <tr>
-        <th>超オススメ！メインメニュー名</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @mainmenus.each do |mainmenu| %>
-        <tr>
-          <td><%= link_to mainmenu.name, mainmenu %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% else %>
-  <p>メインメニュー情報がありません。</p>
+ <h4>超おすすめ！メインメニュー</h4>
+ <% @mainmenus.each do |mainmenu| %><br>
+  <%= mainmenu.name %>
+ <% end %>
+<% end %>
+
+<% if @sidemenus.present? %>
+ <h4>超おすすめ！サイドメニュー</h4>
+ <% @sidemenus.each do |sidemenu| %><br>
+  <%= sidemenu.name %>
+ <% end %>
 <% end %>
 
 <ul>
@@ -38,6 +33,7 @@
     <% end %>
     <li><%= link_to "カート", order_path(@order) %></li>
 	  <li><%= link_to "ログイン", edit_session_path %></li>
+    <li><%= link_to "新規会員登録", new_member_path %></li>
   <% end %>
   <% if current_member %>
     <% "ログインしていて、既にカートへ何かしら入れてorderがnewされている人"%>
@@ -54,5 +50,4 @@
     <li><%= link_to "カート", order_path(@order) %></li>
 	  <li><%= link_to "マイアカウントページ", edit_member_path(current_member) %></li>
   <% end %>
-	<li><%= link_to "新規会員登録", new_member_path %></li>
 </ul>
