パスワードのバリデーション修正とカート内でのトッピング編集機能の追加

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -2,6 +2,8 @@
 
 <h1><%= @page_title %></h1>
 
+<%= render "shared/errors", obj: @member %>
+
 <div class="toolbar"><%= link_to "削除", @member, method: :delete, data: {confirm: "本当に削除しますか？"} %></div>
 <div class="toolbar"><%= link_to "ログアウト", :session, method: :delete, data: {confirm: "ログアウトしますか？"} %></div>
 <div class="toolbar"><%= link_to "利用履歴", member_orders_path(@member) %></div>
@@ -21,7 +23,7 @@
     <td><%= form.text_field :password %></td>
   </tr>
   <tr>
-    <th><%= form.label :password_confirmation, "パスワード" %></th>
+    <th><%= form.label :password_confirmation, "パスワード(確認用)" %></th>
     <td><%= form.text_field :password_confirmation %></td>
   </tr>
   <tr>
