--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,3 +1,7 @@
+<% @page_title = "新規会員登録" %>
+
+<h1><%= @page_title %></h1>
+
 <%= render "shared/errors", obj: @member %>
 
 <%= form_for @member do |form| %>
