--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -49,5 +49,20 @@
     <% end %>
     <li><%= link_to "カート", order_path(@order) %></li>
 	  <li><%= link_to "マイアカウントページ", edit_member_path(current_member) %></li>
+  <% else %>
+    <% "ログインしていないが、既にカート(id = 100)を保持している人" %>
+    <% if Order.find_by(member_id: 100, cart: false).present? %>
+      <% @order = Order.find_by(member_id: 100, cart: false) %>
+    <% "ログインしていないし、カート(id = 100)も持っていない人" %>
+    <% else %>
+      <% @member = Member.new %>
+      <% @member.id = 100 %>
+      <% @member.name = "未ログイン" %>
+      <% @member.save! %>
+      <% @order = Order.new %>
+      <% @order.member = @member %>
+      <% @order.member_id = @member.id %>
+      <% @order.save %>
+    <% end %>
   <% end %>
 </ul>
