--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -38,8 +38,10 @@
 <h4><%= "配達希望時間" %></h4>
 <h4><%= @order.time %></h4>
 
-<h4><%= "会員の保持ポイント" %></h4>
-<h4><%= current_member.point %></h4>
+<% if current_member %>
+  <h4><%= "会員の保持ポイント" %></h4>
+  <h4><%= current_member.point %></h4>
+<% end %>
 
 <%= form_for @order, method: :get, url: edit_order_path(@order) do |form| %>
 	<%= form.hidden_field :address %>
