--- a/app/views/mainmenus/index.html.erb
+++ b/app/views/mainmenus/index.html.erb
@@ -1,10 +1,10 @@
-<% @page_title = "メインメニュー一覧" %>
+<% @page_title = "商品一覧" %>
 <h1><%= @page_title %></h1>
 
-<%= form_tag :search_mainmenus, method: :get, class: "seach" do %>
-  <%= text_field_tag "q", params[:q] %>
-  <%= submit_tag "金額幅指定" %>
-  <%= "指定金額から+200円の幅を表示します。"%>
+<%= form_with url: search_path, method: :get, local: :true do |f| %>
+  金額幅検索：<%= f.text_field :price %><%= "(指定金額から＋２００以内)" %>
+  <%= f.select :search, options_for_select([["メインメニュー"], ["サイドメニュー"], ["商品一覧"]]) %>
+  <%= f.submit "検索" %>
 <% end %>
 
 <% if @mainmenus.present? %>
@@ -31,6 +31,28 @@
   </table>
 <% else %>
   <p>メインメニュー情報がありません。</p>
+<% end %>
+
+<% if @sidemenus.present? %>
+  <table class="list">
+    <thead>
+      <tr>
+        <th>サイドメニュー名</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @sidemenus.each do |sidemenu| %>
+        <tr>
+          <td><%= link_to sidemenu.name, sidemenu %></td>
+        </tr>
+        <tr>
+          <td><%= sidemenu.price %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <p>サイドメニュー情報がありません。</p>
 <% end %>
 
 <div class="toolbar"><%= link_to "<<Top", :root %></div>
