--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,45 +1,57 @@
-<% @page_title = "新規会員登録" %>
+<div class="title">
+  <h1><span>P</span>izza</h1>
+</div>
 
-<h1><%= @page_title %></h1>
+<div class="savutitle">
+  <% @page_title = "新規会員登録" %>
+  <h3><%= @page_title %></h3>
+</div>
 
-<%= render "shared/errors", obj: @member %>
+<div class="main">
 
-<%= form_for @member do |form| %>
-<table class="attr">
-  <tr>
-    <th><%= form.label :name, "アカウント名" %></th>
-    <td><%= form.text_field :name %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :fullname, "氏名" %></th>
-    <td><%= form.text_field :fullname %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :password, "パスワード" %></th>
-    <td><%= form.text_field :password %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :password_confirmation, "パスワード再確認" %></th>
-    <td><%= form.text_field :password_confirmation %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :address, "住所" %></th>
-    <td><%= form.text_field :address %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :email, "メールアドレス" %></th>
-    <td><%= form.text_field :email %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :phone, "電話番号" %></th>
-    <td><%= form.text_field :phone %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :point, "ポイント" %></th>
-    <td><%= 0 %></td>
-  </tr>
-</table>
-  <div><%= form.submit "新規会員登録" %></div>
-<% end %>
 
-<div class="toolbar"><%= link_to "<<Top", :root %></div>
+  <button class="button"><%= link_to "<<Top", :root %></button><br><br>
+
+  <%= render "shared/errors", obj: @member %>
+
+  <%= form_for @member do |form| %>
+  <table class="attr">
+    <tr>
+      <th><%= form.label :name, "アカウント名" %></th>
+      <td><%= form.text_field :name %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :fullname, "氏名" %></th>
+      <td><%= form.text_field :fullname %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :password, "パスワード" %></th>
+      <td><%= form.text_field :password %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :password_confirmation, "パスワード再確認" %></th>
+      <td><%= form.text_field :password_confirmation %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :address, "住所" %></th>
+      <td><%= form.text_field :address %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :email, "メールアドレス" %></th>
+      <td><%= form.text_field :email %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :phone, "電話番号" %></th>
+      <td><%= form.text_field :phone %></td>
+    </tr>
+    <tr>
+      <th><%= form.label :point, "ポイント" %></th>
+      <td><%= 0 %></td>
+    </tr>
+  </table>
+    <div><%= form.submit "新規会員登録" %></div>
+  <% end %>
+
+
+
+</div>
