--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,6 +1,15 @@
-<% @page_title = "確認画面" %>
+<div class="title">
+  <h1><span>P</span>izza</h1>
+</div>
 
-<h1><%= @page_title %></h1>
+<div class="savutitle">
+  <% @page_title = "確認画面" %>
+  <h3><%= @page_title %></h3>
+</div>
+
+
+<div class="main">
+
 
 <h3><%= "注文内容" %></h3>
 
@@ -54,5 +63,8 @@
 	<%= form.hidden_field :address %>
 	<%= form.hidden_field :time %>
   <%= form.hidden_field :point %>
-	<%= form.submit '送信する' %>
+	<%= form.submit '注文を確定する' %>
 <% end %>
+
+
+</div>
