--- a/app/views/admin/toppings/show.html.erb
+++ b/app/views/admin/toppings/show.html.erb
@@ -22,7 +22,7 @@
   <%= form_for [:admin, @topping] do |form| %>
   <tr>
     <th><%= form.label :stock, "ストック更新" %></th>
-    <% options = [1, 2, 3, 4, 5, 6, 7, 8, 9]%>
+    <% options = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]%>
     <td><%= form.select :stock, options %></td>
   </tr>
   <%= form.submit "数量変更" %>
